--- a/.github/workflows/devCard.yml
+++ b/.github/workflows/devCard.yml
@@ -1,8 +1,5 @@
 name: DevCard
 
-permissions:
-  contents: write
-
 on:
   workflow_dispatch:
   schedule:
@@ -11,8 +8,11 @@ on:
 jobs:
   devcard:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: devcard
         uses: dailydotdev/action-devcard@3.1.0
         with:
-          devcard_id: ${{ secrets.DEVCARD_ID }}
+          user_id: ${{ secrets.DEVCARD_ID }}
+          commit_message: "chore: update ${filename}"
